added test files > test.js > new html with css
old version index2.html , game.js,

current index.html, test.js

--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,12 @@
       <title>game</title>
 </head>
 <body>
-
+      <canvas id="battle_game"
+            style="
+                  position: absolute;
+                  top: calc(50% - 200px);
+                  left: calc(50% - 300px);
+            "
+      ></canvas>
 </body>
 </html>
