--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <script defer type="module" src="test.js" charset="utf-8"></script>
+      <script defer type="module" src="game.js" charset="utf-8"></script>
       <title>game</title>
 </head>
 <body>
