--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+      <title>Fight Game</title>
+      <link defer rel="stylesheet" href="./css/game.css">
       <script defer type="module" src="game.js" charset="utf-8"></script>
-      <title>game</title>
 </head>
 <body>
 
